--- a/doc/solution.tex
+++ b/doc/solution.tex
@@ -35,9 +35,9 @@ Hence, we have
 \begin{align*}
   A(n) & =\sum_{i=1}^{n}\binom{n}{n-i}A(n-i)+n!                                 \\
        & =\sum_{i=0}^{n-1}\binom{n}{i}A(i)+n!                                   \\
-  % & =\sum_{i=0}^{n-2}\binom{n}{i}A(i)+nA(n-1)+n!                              \\
-  % & =\sum_{i=0}^{n-2}(\binom{n-1}{i}+\binom{n-1}{i-1})A(i)+nA(n-1)+n!         \\
-  % & =\sum_{i=0}^{n-3}\binom{n-1}{i}A(i)+(n+1)A(n-1)-(n-1)!+n!                 \\
+       & =\sum_{i=0}^{n-2}\binom{n}{i}A(i)+nA(n-1)+n!                           \\
+       & =\sum_{i=0}^{n-2}(\binom{n-1}{i}+\binom{n-1}{i-1})A(i)+nA(n-1)+n!      \\
+       & =\sum_{i=0}^{n-3}\binom{n-1}{i}A(i)+(n+1)A(n-1)-(n-1)!+n!              \\
   % & =A(n-2)-(n-2)!+\sum_{i=0}^{n-3}(\binom{n-1}{i})A(i)+(n+1)A(n-1)-(n-1)!+n! \\
   B(n) & =\sum_{i=1}^{n}\binom{n}{n-i}B(n-i)-\sum_{i=0}^{n}\frac{n!}{i!}        \\
        & =\sum_{i=0}^{n-1}\binom{n}{i}B(i)-\sum_{i=0}^{n}\frac{n!}{i!}          \\
